Add grid for about me section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,39 @@
         </div>
       </nav>
 
+      <br/>
+      <br/>
+
+      <!-- About me -->
+      <div class="container">
+        <div class="row">
+
+          <!-- Header -->
+          <div class="col-sm-12">
+            <h1>About Me</h1>
+          </div>
+
+          <!-- Grid Body -->
+          <div class="row">
+
+            <!-- Image inside body -->
+            <div class="col-sm-6">
+              <img class="img-fluid" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+            </div>
+
+            <!-- Text inside body -->
+            <div class="col-sm-6">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
+              </p>
+            </div>
+          </div>
+   
+        </div>
+
+      </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
