--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </button>
           <div class="collapse navbar-collapse text-right" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link active navbarstyle" aria-current="page" href="#">About Me</a>
+              <a class="nav-link active navbarstyle" aria-current="page" href="index.html">About Me</a>
               <a class="nav-link navbarstyle" href="portfolio.html">Portfolio</a>
               <a class="nav-link navbarstyle" href="contact.html">Contact</a>
             </div>
@@ -36,7 +36,7 @@
         <div class="row">
 
           <!-- Header -->
-          <div class="col-sm-12">
+          <div class="col-sm-12 text-center">
             <h1>About Me</h1>
           </div>
 
@@ -44,14 +44,16 @@
           <div class="row">
 
             <!-- Image inside body -->
-            <div class="col-sm-6">
-              <img class="img-fluid" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+            <div class="col-sm-3">
+              <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
             </div>
 
             <!-- Text inside body -->
-            <div class="col-sm-6">
+            <div class="col-sm-9">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
               </p>
             </div>
           </div>
