--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <br/>
 
       <!-- About me -->
-      <div class="container">
+      <section class="container">
         <div class="row">
 
           <!-- Header -->
@@ -40,28 +40,32 @@
             <h1>About Me</h1>
           </div>
 
-          <!-- Grid Body -->
-          <div class="row">
-
-            <!-- Image inside body -->
-            <div class="col-sm-3">
-              <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
-            </div>
-
-            <!-- Text inside body -->
-            <div class="col-sm-9">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
-              </p>
-            </div>
-          </div>
-   
         </div>
 
-      </div>
-    </div>
+          <!-- Grid Body -->
+        <div class="row">
+
+            <!-- Image inside body -->
+          <figure class="col-sm-3">
+            <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+          </figure>
+
+            <!-- Text inside body -->
+          <article class="col-sm-9">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
+            </p>
+          </article>
+
+        </div>
+      </section>
+
+    <!-- Footer -->
+    <footer>
+      <div id="page-footer"></div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
