Add form for contact.html

--- a/contact.html
+++ b/contact.html
@@ -31,35 +31,45 @@
       <br/>
       <br/>
 
-      <!-- About me -->
+      <!-- Contact -->
       <section class="container">
+        
+        <!-- Name -->
         <div class="row">
 
-          <!-- Header -->
           <div class="col-sm-12 text-center">
-            <h1>About Me</h1>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label navbarstyle">Name</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+            </div>
           </div>
 
         </div>
 
-          <!-- Grid Body -->
+        <!-- Email -->
         <div class="row">
 
-            <!-- Image inside body -->
-          <figure class="col-sm-3">
-            <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
-          </figure>
-
-            <!-- Text inside body -->
-          <article class="col-sm-9">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
-            </p>
-          </article>
+          <div class="col-sm-12 text-center">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label navbarstyle">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+          </div>
 
         </div>
+
+        <!-- Message -->
+        <div class="row">
+
+          <div class="col-sm-12 text-center">
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label navbarstyle">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+            </div>
+          </div>
+        </div>
+        
+
       </section>
 
     <!-- Footer -->
