edit portfolio.html to include placeholder images

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,35 +31,71 @@
       <br/>
       <br/>
 
-      <!-- About me -->
+      <!-- Portfolio Header -->
       <section class="container">
         <div class="row">
 
           <!-- Header -->
-          <div class="col-sm-12 text-center">
-            <h1>About Me</h1>
+          <div class="col-sm-12">
+            <h1>Portfolio</h1>
           </div>
 
         </div>
 
-          <!-- Grid Body -->
+          <!-- First Row Portfolio Photos -->
         <div class="row">
 
-            <!-- Image inside body -->
-          <figure class="col-sm-3">
-            <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
-            <!-- Text inside body -->
-          <article class="col-sm-9">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
-            </p>
-          </article>
+        </div>
+
+          <!-- Second -->
+        <div class="row">
+
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
 
         </div>
+
+          <!-- Third -->
+        <div class="row">
+
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+        </div>
+
+          <!-- Fourth -->
+        <div class="row">
+
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+        </div>
+
+          <!-- Fifth -->
+        <div class="row">
+
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+        </div>
+
+          <!-- Sixth -->
+        <div class="row">
+
+          <figure class="col-sm-12">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+        </div>
+  
       </section>
 
     <!-- Footer -->
