Edit positioning of portfolio image boxes

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         <div class="row">
 
           <!-- Header -->
-          <div class="col-sm-12">
+          <div class="col-sm-12 text-center">
             <h1>Portfolio</h1>
           </div>
 
@@ -45,7 +45,11 @@
           <!-- First Row Portfolio Photos -->
         <div class="row">
 
-          <figure class="col-sm-12">
+          <figure class="col-sm-6">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+          <figure class="col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
@@ -54,40 +58,17 @@
           <!-- Second -->
         <div class="row">
 
-          <figure class="col-sm-12">
+          <figure class="col-sm-6">
+            <img class="img-thumbnail" src="./assets/images/350x350.png">
+          </figure>
+
+          <figure class="col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
         </div>
 
           <!-- Third -->
-        <div class="row">
-
-          <figure class="col-sm-12">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
-          </figure>
-
-        </div>
-
-          <!-- Fourth -->
-        <div class="row">
-
-          <figure class="col-sm-12">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
-          </figure>
-
-        </div>
-
-          <!-- Fifth -->
-        <div class="row">
-
-          <figure class="col-sm-12">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
-          </figure>
-
-        </div>
-
-          <!-- Sixth -->
         <div class="row">
 
           <figure class="col-sm-12">
