--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
           <div class="col-sm-12 text-center">
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label navbarstyle">Email address</label>
+              <label for="exampleFormControlInput1" class="form-label navbarstyle">Email Address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
           </div>
@@ -68,7 +68,13 @@
             </div>
           </div>
         </div>
-        
+
+        <!-- Submit -->
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <input class="btn btn-primary" type="submit" value="Submit">
+          </div>
+        </div>
 
       </section>
 
