add copyright to footer

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
     <!-- Footer -->
     <footer>
-      <div id="page-footer"></div>
+      <div id="page-footer">© Copyright 2020 William Bryan</div>
     </footer>
 
 
