--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="./assets/style.css" rel="stylesheet">
     <title>William Bryan's Portfolio</title>
@@ -37,7 +38,7 @@
         <!-- Name -->
         <div class="row">
 
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label navbarstyle">Name</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
@@ -49,7 +50,7 @@
         <!-- Email -->
         <div class="row">
 
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label navbarstyle">Email Address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -61,7 +62,7 @@
         <!-- Message -->
         <div class="row">
 
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <div class="mb-3">
               <label for="exampleFormControlTextarea1" class="form-label navbarstyle">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
@@ -71,12 +72,16 @@
 
         <!-- Submit -->
         <div class="row">
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <input class="btn btn-primary" type="submit" value="Submit">
           </div>
         </div>
 
       </section>
+
+      <br>
+      <br>
+      <br>
 
     <!-- Footer -->
     <footer>
