--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="./assets/style.css" rel="stylesheet">
     <title>William Bryan's Portfolio</title>
@@ -12,9 +13,9 @@
   <body class="bg">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-          <a class="navbar-brand navbarstyle" href="#" style="font-size: 50px;" >William Bryan</a>
+          <a class="navbar-brand navbarstyle" href="#">William Bryan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -36,7 +37,7 @@
         <div class="row">
 
           <!-- Header -->
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <h1>About Me</h1>
           </div>
 
@@ -46,12 +47,12 @@
         <div class="row">
 
             <!-- Image inside body -->
-          <figure class="col-sm-3">
+          <figure class="col-sm-12 col-md-3">
             <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
           </figure>
 
             <!-- Text inside body -->
-          <article class="col-sm-9">
+          <article class="col-sm-12 col-md-9">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
@@ -61,6 +62,10 @@
 
         </div>
       </section>
+
+      <br>
+      <br>
+      <br>
 
     <!-- Footer -->
     <footer>
