--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="./assets/style.css" rel="stylesheet">
     <title>William Bryan's Portfolio</title>
@@ -36,7 +37,7 @@
         <div class="row">
 
           <!-- Header -->
-          <div class="col-sm-12 text-center">
+          <div class="col-xs-12 text-center">
             <h1>Portfolio</h1>
           </div>
 
@@ -45,11 +46,11 @@
           <!-- First Row Portfolio Photos -->
         <div class="row">
 
-          <figure class="col-sm-6">
+          <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
-          <figure class="col-sm-6">
+          <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
@@ -58,11 +59,11 @@
           <!-- Second -->
         <div class="row">
 
-          <figure class="col-sm-6">
+          <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
-          <figure class="col-sm-6">
+          <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
@@ -71,7 +72,7 @@
           <!-- Third -->
         <div class="row">
 
-          <figure class="col-sm-12">
+          <figure class="col-xs-12">
             <img class="img-thumbnail" src="./assets/images/350x350.png">
           </figure>
 
