update accessibility and minor postion fixes

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm">
-        <div class="container-fluid">
-          <a class="navbar-brand navbarstyle" href="#">William Bryan</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-right" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active navbarstyle" aria-current="page" href="index.html">About Me</a>
-              <a class="nav-link navbarstyle" href="portfolio.html">Portfolio</a>
-              <a class="nav-link navbarstyle" href="contact.html">Contact</a>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand navbarstyle" href="index.html" style="font-size: 50px;" >William Bryan</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-right" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active navbarstyle" aria-current="page" href="index.html">About Me</a>
+            <a class="nav-link navbarstyle" href="portfolio.html">Portfolio</a>
+            <a class="nav-link navbarstyle" href="contact.html">Contact</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <br/>
       <br/>
@@ -48,7 +48,7 @@
 
             <!-- Image inside body -->
           <figure class="col-sm-12 col-md-3">
-            <img class="img-fluid img-thumbnail" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+            <img class="img-fluid img-thumbnail" alt="William Bryan Profile Pic" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
           </figure>
 
             <!-- Text inside body -->
