--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body class="bg">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
           <a class="navbar-brand navbarstyle" href="#" style="font-size: 50px;" >William Bryan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +47,11 @@
         <div class="row">
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
+            <img class="img-thumbnail" alt="project 1" src="./assets/images/350x350.png">
           </figure>
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
+            <img class="img-thumbnail" alt="project 2" src="./assets/images/350x350.png">
           </figure>
 
         </div>
@@ -60,11 +60,11 @@
         <div class="row">
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
+            <img class="img-thumbnail" alt="project 3" src="./assets/images/350x350.png">
           </figure>
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
+            <img class="img-thumbnail" alt="project 4" src="./assets/images/350x350.png">
           </figure>
 
         </div>
@@ -73,7 +73,7 @@
         <div class="row">
 
           <figure class="col-xs-12">
-            <img class="img-thumbnail" src="./assets/images/350x350.png">
+            <img class="img-thumbnail" alt="project 5" src="./assets/images/350x350.png">
           </figure>
 
         </div>
