--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <body class="bg">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
           <a class="navbar-brand navbarstyle" href="index.html" style="font-size: 50px;" >William Bryan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
