update personal info in index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <!-- Header -->
           <div class="col-xs-12 text-center">
             <h1>About Me</h1>
+            <hr style="background-color: white;">
           </div>
 
         </div>
@@ -48,15 +49,18 @@
 
             <!-- Image inside body -->
           <figure class="col-sm-12 col-md-3">
-            <img class="img-fluid img-thumbnail" alt="William Bryan Profile Pic" src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697">
+            <img class="img-fluid img-thumbnail" alt="William Bryan Profile Pic" src="./assets/images/PP.jpg">
           </figure>
 
             <!-- Text inside body -->
           <article class="col-sm-12 col-md-9">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In est quae minus excepturi eos voluptatibus neque perspiciatis libero tempore error. Repellendus recusandae eius aperiam soluta necessitatibus similique mollitia, eos veritatis.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic harum fugiat aliquam excepturi aliquid dolores ullam, repellat aperiam qui expedita iure quasi nostrum doloribus possimus rerum voluptas odit soluta.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique, in ipsam doloremque voluptates voluptatibus! Accusantium recusandae, itaque iusto necessitatibus accusamus inventore voluptatum non cum natus nulla consectetur incidunt sapiente!
+              Hello! Visiting this page means you've taken an interest in me. My name is William Bryan and I am an aspiring web developer.
+              I am still very green in the subject of web development but I am a quick learner.
+              I hope by viewing my portfolio you can see my quick advancement in technique and technical skill when it comes to coding.
+              I currently reside in Reno, Nevada but I am open to moving. 
+              Feel free to browse my portfolio to view my personal projects and please contact me with any questions.
+              I appreciate you taking the time to consider me.
             </p>
           </article>
 
