Add social links

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <br/>
 
       <!-- About me -->
-      <section class="container">
-        <div class="row">
+      <div class="container">
+        <section class="row">
 
           <!-- Header -->
           <div class="col-xs-12 text-center">
@@ -42,10 +42,10 @@
             <hr style="background-color: white;">
           </div>
 
-        </div>
+        </section>
 
           <!-- Grid Body -->
-        <div class="row">
+        <section class="row">
 
             <!-- Image inside body -->
           <figure class="col-sm-12 col-md-3">
@@ -63,9 +63,30 @@
               I appreciate you taking the time to consider me.
             </p>
           </article>
+        </section>
 
-        </div>
-      </section>
+        <!-- Social Media links header -->
+        <section class="row">
+          <article class="col-xs-12 text-center">
+            <h1>Social Links</h1>
+            <hr style="background-color: white;">
+          </article>
+        </section>
+
+        <!-- Contact links -->
+        <section class="row">
+
+          <article class="col-xs-12 col-md-6 text-center">
+            <a href="https://www.linkedin.com/in/william-bryan-72730019a/">LinkedIn</a>
+          </article>
+
+          <article class="col-xs-12 col-md-6 text-center">
+            <a href="https://github.com/WeiLiBryan">Github</a>
+          </article>
+
+        </section>
+
+      </div>
 
       <br>
       <br>
