--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
       <br/>
 
       <!-- Contact -->
-      <section class="container">
+      <div class="container">
         
         <!-- Name -->
-        <div class="row">
+        <section class="row">
 
           <div class="col-xs-12 text-center">
             <div class="mb-3">
@@ -45,10 +45,10 @@
             </div>
           </div>
 
-        </div>
+        </section>
 
         <!-- Email -->
-        <div class="row">
+        <section class="row">
 
           <div class="col-xs-12 text-center">
             <div class="mb-3">
@@ -57,10 +57,10 @@
             </div>
           </div>
 
-        </div>
+        </section>
 
         <!-- Message -->
-        <div class="row">
+        <section class="row">
 
           <div class="col-xs-12 text-center">
             <div class="mb-3">
@@ -68,16 +68,16 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Submit -->
-        <div class="row">
+        <section class="row">
           <div class="col-xs-12 text-center">
             <input class="btn btn-primary" type="submit" value="Submit">
           </div>
-        </div>
+        </section>
 
-      </section>
+      </div>
 
       <br>
       <br>
