change semantic tags and .md

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <section class="row">
 
           <article class="col-xs-12 col-md-6 text-center">
-            <a href="https://www.linkedin.com/in/william-bryan-72730019a/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/william-bryan-72730019a/" target="_blank">LinkedIn</a>
           </article>
 
           <article class="col-xs-12 col-md-6 text-center">
-            <a href="https://github.com/WeiLiBryan">Github</a>
+            <a href="https://github.com/WeiLiBryan" target="_blank">Github</a>
           </article>
 
         </section>
