--- a/portfolio.html
+++ b/portfolio.html
@@ -33,18 +33,18 @@
       <br/>
 
       <!-- Portfolio Header -->
-      <section class="container">
-        <div class="row">
+      <div class="container">
+        <section class="row">
 
           <!-- Header -->
           <div class="col-xs-12 text-center">
             <h1>Portfolio</h1>
           </div>
 
-        </div>
+        </section>
 
           <!-- First Row Portfolio Photos -->
-        <div class="row">
+        <section class="row">
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" alt="project 1" src="./assets/images/350x350.png">
@@ -54,10 +54,10 @@
             <img class="img-thumbnail" alt="project 2" src="./assets/images/350x350.png">
           </figure>
 
-        </div>
+        </section>
 
           <!-- Second -->
-        <div class="row">
+        <section class="row">
 
           <figure class="col-sm-12 col-md-6 col-sm-6">
             <img class="img-thumbnail" alt="project 3" src="./assets/images/350x350.png">
@@ -67,18 +67,18 @@
             <img class="img-thumbnail" alt="project 4" src="./assets/images/350x350.png">
           </figure>
 
-        </div>
+        </section>
 
           <!-- Third -->
-        <div class="row">
+        <section class="row">
 
           <figure class="col-xs-12">
             <img class="img-thumbnail" alt="project 5" src="./assets/images/350x350.png">
           </figure>
 
-        </div>
+        </section>
   
-      </section>
+      </div>
 
       <br>
       <br>
